# vulkan-engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
core/math/: transform_3d.h
core/scene/: node.h  scene.h
core/scene/3d/: camera_3d.h  node_3d.h
shaders/: simple.frag  simple.vert
src/: application.cpp  application.h  buffer.cpp  buffer.h  camera.cpp  camera.h  device.cpp  device.h  frame_info.h  graphics_pipeline.cpp  graphics_pipeline.h  input.cpp  input.h  main.cpp  model.cpp  model.h  object.cpp  object.h  renderer.cpp  renderer.h  rendering_server.cpp  rendering_server.h  swap_chain.cpp  swap_chain.h  utils.h  window.cpp  window.h
